--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>7 Special Days of Valentine</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header class="site-header">
+    <h1>7 Special Days of Valentine</h1>
+    <p>Each day, a little more love — leading up to Valentine's Day</p>
+    <nav class="nav-days" aria-label="Days of Valentine">
+      <a href="rose.html">Rose Day</a>
+      <a href="propose.html">Propose Day</a>
+      <a href="chocolate.html">Chocolate Day</a>
+      <a href="teddy.html">Teddy Day</a>
+      <a href="promise.html">Promise Day</a>
+      <a href="hug.html">Hug Day</a>
+      <a href="kiss.html">Kiss Day</a>
+    </nav>
+  </header>
 
+  <main class="page">
+    <div class="content-card">
+      <p style="text-align: center; color: var(--rose-mid); margin-bottom: 1rem;">Pick a day and add your memories</p>
+      <div class="landing-grid">
+        <a href="rose.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">🌹</span>
+          <span class="day-name">Rose Day</span>
+          <span class="day-date">Feb 7</span>
+        </a>
+        <a href="propose.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">💍</span>
+          <span class="day-name">Propose Day</span>
+          <span class="day-date">Feb 8</span>
+        </a>
+        <a href="chocolate.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">🍫</span>
+          <span class="day-name">Chocolate Day</span>
+          <span class="day-date">Feb 9</span>
+        </a>
+        <a href="teddy.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">🧸</span>
+          <span class="day-name">Teddy Day</span>
+          <span class="day-date">Feb 10</span>
+        </a>
+        <a href="promise.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">🤝</span>
+          <span class="day-name">Promise Day</span>
+          <span class="day-date">Feb 11</span>
+        </a>
+        <a href="hug.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">🤗</span>
+          <span class="day-name">Hug Day</span>
+          <span class="day-date">Feb 12</span>
+        </a>
+        <a href="kiss.html" class="landing-card">
+          <span class="emoji" aria-hidden="true">💋</span>
+          <span class="day-name">Kiss Day</span>
+          <span class="day-date">Feb 13</span>
+        </a>
+      </div>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    Made with love — 7 Special Days of Valentine
+  </footer>
+</body>
+</html>
