--- a/rose.html
+++ b/rose.html
@@ -12,7 +12,7 @@
       <a href="index.html" class="back">← All days</a>
       <h1>🌹 Rose Day</h1>
       <p class="date">February 7</p>
-      <p class="tagline">Start the week with a rose — a symbol of love and affection.</p>
+      <p class="tagline">A girl like you deserves the whole world !! </p>
     </header>
 
     <div class="content-card">
