added propose day and photos

--- a/propose.html
+++ b/propose.html
@@ -12,11 +12,19 @@
       <a href="index.html" class="back">← All days</a>
       <h1>💍 Propose Day</h1>
       <p class="date">February 8</p>
-      <p class="tagline">A day to express your feelings and say those special words.</p>
+      <p class="tagline">A day I bind myself with you forever and ever after.</p>
     </header>
 
     <div class="content-card">
-      <p>Save your Propose Day keepsakes — letters, photos, or screenshots of your proposal.</p>
+      <p> Give me this chance , I have changed, I am a changed man , a man who loves you more than anything, who does not only want to love you but care for you.</p>
+      <p> I am not a perfect man, I have made mistakes, I have hurt you, I have lied to you, I have cheated on you, I have hurt you more than I can even imagine. </p>
+      <p> But I have changed , I saw through my mistakes, I will give my best not to let you down again.</p>
+      <p> I want to be with you forever, I want to be with you through thick and thin, I want to be with you through good and bad, I want to be with you through all of your life.</p>
+      <div class="propose-photos">
+        <img src="p1.png" alt="Propose Day photo 1" />
+        <img src="p2.png" alt="Propose Day photo 2" />
+        <img src="p3.png" alt="Propose Day photo 3" />
+      </div>
     </div>
   </main>
   <footer class="site-footer">7 Special Days of Valentine</footer>
