--- a/chocolate.html
+++ b/chocolate.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chocolate Day — 7 Days of Valentine</title>
+  <title>No chocolate can exceed your sweetness my love !!</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,6 +17,13 @@
 
     <div class="content-card">
       <p>Capture your Chocolate Day — gifts, treats, or cozy moments with your favorite person.</p>
+      <div class="chocolate-photos">
+        <img src="c1.png" alt="Chocolate Day photo 1" />
+        <img src="c2.png" alt="Chocolate Day photo 2" />
+        <img src="c3.png" alt="Chocolate Day photo 3" />
+        <img src="c4.png" alt="Chocolate Day photo 4" />
+        <img src="c5.png" alt="Chocolate Day photo 5" />
+      </div>
     </div>
   </main>
   <footer class="site-footer">7 Special Days of Valentine</footer>
