--- a/chocolate.html
+++ b/chocolate.html
@@ -12,7 +12,7 @@
       <a href="index.html" class="back">← All days</a>
       <h1>🍫 Chocolate Day</h1>
       <p class="date">February 9</p>
-      <p class="tagline">Sweet treats and sweet moments — share the sweetness of love.</p>
+      <p class="tagline">No chocolate can exceed your sweetness my love !!</p>
     </header>
 
     <div class="content-card">
