new teddy panel

--- a/teddy.html
+++ b/teddy.html
@@ -17,6 +17,9 @@
 
     <div class="content-card">
       <p>Keep your Teddy Day memories — plushies, gifts, or snapshots of the day.</p>
+      <div class="teddy-photos">
+        <img src="t1.png" alt="Teddy Day photo" />
+      </div>
     </div>
   </main>
   <footer class="site-footer">7 Special Days of Valentine</footer>
